<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:id="@+id/custom_layout">

    <!-- First Spinner -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/model_hint_action" />
    <Spinner
        android:id="@+id/firstSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"/>

    <!-- Second Spinner -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/model_hint_state"/>
    <Spinner
        android:id="@+id/secondSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"/>

    <!-- First EditText -->
    <EditText
        android:id="@+id/firstEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/model_prob"
        android:inputType="numberDecimal" />

    <!-- Second EditText -->
    <EditText
        android:id="@+id/secondEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/model_reward"
        android:inputType="numberDecimal|numberSigned"/>


</LinearLayout>